account verification mobile fixed

--- a/assets/scss/pages/auth-pages.scss
+++ b/assets/scss/pages/auth-pages.scss
@@ -359,13 +359,21 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 450px;
+    width: 96%;
     max-width: 450px;
     box-shadow: 0 1.5px 25px 0 rgba(88, 80, 119, 0.19);
     border-radius: 5px;
 
     h5 {
       line-height: 1.5;
+
+      @media(max-width: 599px) {
+        white-space: normal;
+
+        br {
+          display: none;
+        }
+      }
     }
 
     .verification-code-container {
@@ -375,9 +383,7 @@
         border: none;
 
         &:focus {
-          //border: 1px solid #ced4da;
           border-radius: 2.5px;
-          //border-left: 0;
           background-color: transparent;
         }
       }
@@ -436,6 +442,10 @@
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 1.5px 25px 0 rgba(88, 80, 119, 0.19);
+
+    @media(max-width: 599px) {
+      padding: 0 15px;
+    }
   }
 
   .submit-button {
@@ -460,6 +470,10 @@
 
       &:focus {
         box-shadow: none !important;
+      }
+
+      i {
+        padding-left: 10px;
       }
     }
   }
